--- a/page_rebuild/pubspec.yaml
+++ b/page_rebuild/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - resources/headerBackground.jpg
+    - resources/homeIcon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
